# ADL_LRS

./: .gitignore  0002_auto_20230727_0941.py  Dockerfile  README.local.md  docker-compose.yml  fabfile.py  pyproject.toml  requirements.txt  setup.py
adl_lrs/: models.py  settings.py  urls.py  views.py
lrs/: admin.py  models.py  urls.py  views.py
lrs/managers/: ActivityManager.py  ActivityProfileManager.py  ActivityStateManager.py  AgentProfileManager.py  StatementManager.py
lrs/migrations/: 0001_initial.py  0002_auto_20230907_0731.py  0003_auto_20230918_0335.py  0003_auto_20231016_0844.py  0003_auto_20231025_0756.py  0004_activity_idx_canonical_activity.py  0005_auto_20231220_0743.py  0006_alter_agent_member.py  0007_alter_statement_context_instructor_and_more.py
lrs/tests/: ActivityManagerTests.py  ActivityProfileTests.py  ActivityStateTests.py  ActivityTests.py  AgentManagerTests.py  AgentProfileTests.py  AgentTests.py  AttachmentAndSignedTests.py  AuthTests.py  OAuth2Tests.py  OAuthTests.py  StatementFilterTests.py  StatementManagerTests.py  StatementMoreTests.py  StatementTests.py  __init__.py  test_OAuth.py
lrs/util/: AllowOriginMiddleware.py  Authorization.py  StatementValidator.py  XAPIVersionHeaderMiddleware.py  accept_middleware.py  etag.py  fields.py  req_parse.py  req_process.py  req_validate.py  retrieve_statement.py  util.py
lrs/utils/: authorization.py  req_parse.py  req_validate.py
oauth_provider/: admin.py  backends.py  compat.py  consts.py  decorators.py  forms.py  models.py  responses.py  urls.py  utils.py  views.py
(+19 files in other folders)
