[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "lrs"
version = "0.1.0"
authors = []
description = ""
readme = "readme.md"
packages = [{include = "lrs"}, {include = "adl_lrs"}, {include = "oauth_provider"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "~4.2.10"
bcoding = "~1.5"
pycryptodome = "~3.12.0"
oauth2 = "~1.9.0.post1"
shortuuid = "~0.4.2"
django-jsonify = "~0.3.0"
django-extensions = ">=3.1.5"
jsonfield = { git = "https://github.com/sponge-learning/jsonfield.git", rev = "7e9cf8ada44c13040c91aebf57df7b36e7776c16" }
isodate = "~0.6.1"


